[gd_scene load_steps=28 format=2]

[ext_resource path="res://scripts/levelScript.gd" type="Script" id=1]
[ext_resource path="res://levels/common/commonWorldEnvironment.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/realmini.png" type="Texture" id=3]
[ext_resource path="res://tiles.tres" type="MeshLibrary" id=4]
[ext_resource path="res://sceneObjects/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Player.gd" type="Script" id=6]
[ext_resource path="res://sceneObjects/portdoor.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/portdoor.gd" type="Script" id=8]
[ext_resource path="res://sceneObjects/Item.tscn" type="PackedScene" id=9]
[ext_resource path="res://levels/Swamp/BroomItemScript.gd" type="Script" id=10]
[ext_resource path="res://scripts/_InteractionArea_Active.gd" type="Script" id=11]
[ext_resource path="res://scripts/TextContainer.gd" type="Script" id=12]
[ext_resource path="res://assets/broomportrait.png" type="Texture" id=13]
[ext_resource path="res://scripts/TextBox.gd" type="Script" id=14]
[ext_resource path="res://assets/Quirk.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://assets/sounds/LA_Stairs.wav" type="AudioStream" id=16]
[ext_resource path="res://scripts/AbortSound.gd" type="Script" id=17]
[ext_resource path="res://assets/sounds/pop.wav" type="AudioStream" id=18]
[ext_resource path="res://levels/Swamp/BroomAbortSound.gd" type="Script" id=19]
[ext_resource path="res://assets/player_sheet0000.png" type="Texture" id=20]

[sub_resource type="Environment" id=1]
background_mode = 4
ambient_light_color = Color( 0.4, 0.4, 0.4, 1 )
ambient_light_energy = 0.7

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="SphereShape" id=3]
radius = 2.0

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0.696045, 0.0273438, 1, 1, 0, 1, 0.015625, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 64
extra_spacing_top = 42
extra_spacing_char = 2
extra_spacing_space = 2
font_data = ExtResource( 15 )

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
params_depth_draw_mode = 3
params_billboard_mode = 1

[node name="level" type="Node"]
script = ExtResource( 1 )

[node name="commonWorldEnvironment" type="WorldEnvironment" parent="." instance=ExtResource( 2 )]
environment = SubResource( 1 )

[node name="BackgroundControl" type="Control" parent="."]

[node name="TextureRect" type="TextureRect" parent="BackgroundControl"]
margin_right = 1020.0
margin_bottom = 763.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="Level Tiles" type="GridMap" parent="."]
mesh_library = ExtResource( 4 )
cell_octant_size = 4
data = {
"cells": PoolIntArray( 0, 0, 4, 1, 0, 15, 2, 0, 4, 65533, 0, 15, 65534, 0, 4, 65535, 0, 15, 0, 1, 15, 1, 1, 4, 2, 1, 15, 65533, 1, 4, 65534, 1, 15, 65535, 1, 4, 0, 2, 4, 65535, 2, 15, 0, 3, 15, 65535, 3, 4, 0, 65532, 4, 1, 65532, 15, 2, 65532, 4, 65533, 65532, 15, 65534, 65532, 4, 65535, 65532, 15, 0, 65533, 15, 1, 65533, 4, 2, 65533, 15, 65533, 65533, 4, 65534, 65533, 15, 65535, 65533, 4, 0, 65534, 4, 1, 65534, 15, 2, 65534, 4, 65533, 65534, 15, 65534, 65534, 4, 65535, 65534, 15, 0, 65535, 15, 1, 65535, 4, 2, 65535, 15, 65533, 65535, 4, 65534, 65535, 15, 65535, 65535, 4 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="Player" type="KinematicBody" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.17619, 3.001, -0.71918 )
collision_layer = 2
script = ExtResource( 6 )
grav = 80

[node name="portdoor" type="Sprite3D" parent="." instance=ExtResource( 7 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 0, 3.4124, 6.95208 )
script = ExtResource( 8 )
midLevelDir = ""
connectedScene = "levels/GenericScene.tscn"
isLocked = false

[node name="Item" type="KinematicBody" parent="." instance=ExtResource( 9 )]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.48445, 3.2514, -5.79153 )
visible = false
script = ExtResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="Item" index="0"]
shape = SubResource( 2 )
disabled = true

[node name="InteractionArea" type="Area" parent="Item" index="1"]
editor/display_folded = true
script = ExtResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="Item/InteractionArea" index="0"]
shape = SubResource( 3 )

[node name="Object TextBox" type="CanvasLayer" parent="Item" index="2"]
script = ExtResource( 12 )
nextTextBoxPath = NodePath("")
bbText = "u got it"
portrait = ExtResource( 13 )

[node name="TextBox" type="TextureRect" parent="Item/Object TextBox" index="0"]
visible = false
margin_right = 578.0
margin_bottom = 207.0
texture = SubResource( 5 )
expand = true
script = ExtResource( 14 )
nextTextBoxPath = NodePath("")

[node name="Portrait" type="TextureRect" parent="Item/Object TextBox/TextBox" index="0"]
margin_left = 31.0
margin_top = 25.0
margin_right = 181.0
margin_bottom = 175.0
texture = ExtResource( 13 )
expand = true

[node name="Text" type="RichTextLabel" parent="Item/Object TextBox/TextBox" index="1"]
margin_left = 199.0
margin_right = 608.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "u got it"
text = "u got it"

[node name="DialogSound" type="AudioStreamPlayer" parent="Item/Object TextBox/TextBox" index="2"]
stream = ExtResource( 16 )
volume_db = -30.0
script = ExtResource( 17 )

[node name="AbortSound" type="AudioStreamPlayer" parent="Item/Object TextBox/TextBox" index="3"]
stream = ExtResource( 18 )
volume_db = -20.0
script = ExtResource( 19 )

[node name="Sprite3D" type="Sprite3D" parent="Item" index="3"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, -0.542688, 0.822127, -0.318238 )
material_override = SubResource( 7 )
pixel_size = 0.12
shaded = true
alpha_cut = 2
texture = ExtResource( 20 )
vframes = 8
hframes = 8
frame = 10


[editable path="Item"]

[editable path="Item/Object TextBox"]
