[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/portdoor.gd" type="Script" id=1]
[ext_resource path="res://scripts/_InteractionArea_Passive.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/LA_Stairs.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/minecraftdoor0000.png" type="Texture" id=4]
[ext_resource path="res://scripts/portdoorPolyTriangle.gd" type="Script" id=5]
[ext_resource path="res://sceneObjects/TextBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/npcs/tootorialgrey.png" type="Texture" id=7]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
roughness = 0.0

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )

[sub_resource type="BoxShape" id=4]

[sub_resource type="CubeMesh" id=5]
size = Vector3( 2, 1, 2 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
params_blend_mode = 2
roughness = 0.0

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
flags_vertex_lighting = true
params_cull_mode = 2
distance_fade_mode = 1
distance_fade_min_distance = 0.0
distance_fade_max_distance = 5.0

[node name="portdoor" type="Sprite3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.4124, -6.04792 )
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Area"]
visible = false
mesh = SubResource( 3 )
material/0 = null

[node name="landing-pad" type="Area" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3249, 3.48362 )

[node name="CollisionShape" type="CollisionShape" parent="landing-pad"]
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="landing-pad"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="EnterSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -30.0

[node name="PolyTriangle" type="Sprite3D" parent="."]
material_override = SubResource( 7 )
pixel_size = 0.02
shaded = true
alpha_cut = 2
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="portdoorTextBox" parent="." instance=ExtResource( 6 )]
editor/display_folded = true

[node name="Portrait" parent="portdoorTextBox/TextBox" index="0"]
texture = ExtResource( 7 )

[node name="Text" parent="portdoorTextBox/TextBox" index="1"]
bbcode_text = "door is lock"
text = "door is lock"


[editable path="portdoorTextBox"]
